<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="errorMessage"
            type="String" />

        <variable
            name="viewModel"
            type="com.example.androidcodingchallenge.view.viewmodel.ProductListingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.HomeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline">


            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeToRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvProductsList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toTopOf="@+id/btnNotAvailable"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_available_product_list" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAvailable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/teal_200"
                        android:onClick="@{()->viewModel.btnAvailable()}"
                        android:padding="10dp"
                        android:text="@string/available"
                        android:textColor="@color/white"
                        app:cornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnNotAvailable"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNotAvailable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/teal_200"
                        android:onClick="@{()->viewModel.btnNotAvailable()}"
                        android:padding="10dp"
                        android:text="@string/not_available"
                        android:textColor="@color/white"
                        app:cornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/btnAll"
                        app:layout_constraintStart_toEndOf="@+id/btnAvailable" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/teal_200"
                        android:onClick="@{()->viewModel.btnAll()}"
                        android:padding="10dp"
                        android:text="@string/all"
                        android:textColor="@color/white"
                        app:cornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btnNotAvailable" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clErrorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_product_rounded_border"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivErrorIcon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_error" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvItemName"
                    style="@style/Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/problem"
                    app:layout_constraintStart_toEndOf="@id/ivErrorIcon"
                    app:layout_constraintTop_toTopOf="@id/ivErrorIcon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescription"
                    style="@style/Description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@{errorMessage}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvItemName"
                    app:layout_constraintTop_toBottomOf="@id/tvItemName"
                    tools:text="Item description is here here here !!" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRetry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/teal_200"
                    android:onClick="@{()->viewModel.productsList}"
                    android:text="@string/retry"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/initConstraintView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ViewFlipper>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>